MLDS-1235 SonarQube Fixes For MLDS-6.1.0 Q3